# AppVeyorDemo

./: .gitignore  README.md  appveyor.yml
src/: CMakeLists.txt  main.cpp
